force-app/main/default/objects/Order_Line_Item__c/fields/FG_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>FG_Product_Name__c</fullName>
    <formula>Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FG Product Name</label>
    <type>Text</type>
</CustomField>