force-app/main/default/objects/Order_Line_Item__c/fields/FG_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>FG_Record_Type__c</fullName>
    <formula>Order__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FG Record Type</label>
    <type>Text</type>
</CustomField>