force-app/main/default/objects/Order_Line_Item__c/fields/Is_Brand_Product__c.field-meta.xml
<CustomField>
    <fullName>Is_Brand_Product__c</fullName>
    <formula>IF(OR(Product__r.Producer_Name__r.Id = $User.AccountId__c, Product__r.Licensee_Name__r.Id = $User.AccountId__c),True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Brand Product</label>
    <type>Checkbox</type>
</CustomField>