force-app/main/default/objects/Order_Line_Item__c/fields/IsPromo__c.field-meta.xml
<CustomField>
    <fullName>IsPromo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsPromo</label>
    <type>Checkbox</type>
</CustomField>