force-app/main/default/objects/Order_Line_Item__c/fields/Line_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Line_Total_Cost__c</fullName>
    <formula>Line_Total_Qty__c *  UnitPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Product Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>