force-app/main/default/objects/Order_Line_Item__c/fields/Line_Total_Excise_Tax__c.field-meta.xml
<CustomField>
    <fullName>Line_Total_Excise_Tax__c</fullName>
    <formula>Unit_Excise_Tax__c *  Line_Total_Qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Excise Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>