force-app/main/default/objects/Order_Line_Item__c/fields/Line_Total_Qty__c.field-meta.xml
<CustomField>
    <fullName>Line_Total_Qty__c</fullName>
    <formula>MOQ__c * Quantity_Cases__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Total Qty</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>