force-app/main/default/objects/Order_Line_Item__c/fields/MOQ__c.field-meta.xml
<CustomField>
    <fullName>MOQ__c</fullName>
    <label>Qty per Case (MOQ)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>