force-app/main/default/objects/Order_Line_Item__c/fields/Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Status__c</fullName>
    <description>IF( NOT(ISNULL(TEXT(OrderLine_Status__c) )) , TEXT(OrderLine_Status__c),

Text(Order__r.Status__c))</description>
    <formula>IF( NOT(ISBLANK(TEXT(OrderLine_Status__c) )) , TEXT(OrderLine_Status__c),

Text(Order__r.Status__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Status</label>
    <type>Text</type>
</CustomField>