force-app/main/default/objects/Order_Line_Item__c/fields/OrderLine_Status__c.field-meta.xml
<CustomField>
    <fullName>OrderLine_Status__c</fullName>
    <label>OrderLine Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Shipment Complete</fullName>
            </value>
            <value>
                <fullName>Cancelled by WOVN</fullName>
            </value>
            <value>
                <fullName>Cancelled by Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>