force-app/main/default/objects/Order_Line_Item__c/fields/Pack_Out_Fee__c.field-meta.xml
<CustomField>
    <fullName>Pack_Out_Fee__c</fullName>
    <label>Pack-Out Fee</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>