force-app/main/default/objects/Order_Line_Item__c/fields/Pick_Pack_Fee__c.field-meta.xml
<CustomField>
    <fullName>Pick_Pack_Fee__c</fullName>
    <inlineHelpText>Calculated Pick and Pack Fee based on Item and Qty from Fulfillment Rates Table</inlineHelpText>
    <label>Pick &amp; Pack Fee</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>