force-app/main/default/objects/Order_Line_Item__c/fields/Price_Book_Entry_Id__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Entry_Id__c</fullName>
    <label>Price Book Entry Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>