force-app/main/default/objects/Order_Line_Item__c/fields/Product_Title__c.field-meta.xml
<CustomField>
    <fullName>Product_Title__c</fullName>
    <description>Used in Order to Opportunity conversion process</description>
    <formula>if( CONTAINS(Order__r.Account__r.Community_Price_Book__r.Name, &apos;Standard&apos;), 
&apos;Supplier&apos;, &apos;Distributor&apos;)</formula>
    <label>Product Title</label>
    <type>Text</type>
</CustomField>