force-app/main/default/objects/Order_Line_Item__c/fields/QA_Review_Fee__c.field-meta.xml
<CustomField>
    <fullName>QA_Review_Fee__c</fullName>
    <inlineHelpText>Calculated QA Review Fee based on Item &amp; Qty from Fulfillment Rates Table</inlineHelpText>
    <label>QA Review Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>