force-app/main/default/objects/Order_Line_Item__c/fields/Quantity_Cases__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Cases__c</fullName>
    <label>Order Qty (Cases)</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>