force-app/main/default/objects/Order_Line_Item__c/fields/Recalc_Excise_Tax__c.field-meta.xml
<CustomField>
    <fullName>Recalc_Excise_Tax__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in PB &amp; workflow</description>
    <label>Recalc Excise Tax</label>
    <type>Checkbox</type>
</CustomField>