force-app/main/default/objects/Order_Line_Item__c/fields/Sales_Person__c.field-meta.xml
<CustomField>
    <fullName>Sales_Person__c</fullName>
    <formula>Order__r.Sales_Person__r.FirstName &amp; &quot; &quot; &amp; Order__r.Sales_Person__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Person</label>
    <type>Text</type>
</CustomField>