force-app/main/default/objects/Order_Line_Item__c/fields/Subtotal_Local_Cannabis_Tax__c.field-meta.xml
<CustomField>
    <fullName>Subtotal_Local_Cannabis_Tax__c</fullName>
    <label>Subtotal Local Cannabis Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>