force-app/main/default/objects/Order_Line_Item__c/fields/Total_Weight_lbs__c.field-meta.xml
<CustomField>
    <fullName>Total_Weight_lbs__c</fullName>
    <inlineHelpText>Calculated Weight Based on Gross or Dimensional (DIM) Weight, whichever is greater.</inlineHelpText>
    <label>Total Weight (lbs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>