force-app/main/default/objects/Order_Line_Item__c/fields/Unit_Excise_Tax__c.field-meta.xml
<CustomField>
    <fullName>Unit_Excise_Tax__c</fullName>
    <label>Unit Excise Tax</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>