force-app/main/default/objects/Order_Line_Item__c/fields/Weight_to_Order_Fee__c.field-meta.xml
<CustomField>
    <fullName>Weight_to_Order_Fee__c</fullName>
    <formula>Weight_to_Order_Ratio__c * Order__r.Total_Weight_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weight to Order Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>