force-app/main/default/objects/Order_Line_Item__c/fields/Weight_to_Order_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Weight_to_Order_Ratio__c</fullName>
    <formula>Total_Weight_lbs__c / Order__r.Total_Weight_lbs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weight to Order Ratio (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>